actix-web-thiserror/tests/compile-fail/status-code-invalid.stderr
error: proc-macro derive panicked
 --> tests/compile-fail/status-code-invalid.rs:4:24
  |
4 | #[derive(Debug, Error, ResponseError)]
  |                        ^^^^^^^^^^^^^
  |
  = help: message: invalid status code
